bio grammar check

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
 
         <h3>A Brief Timeline</h3>
-        <p class="caption">Seeing the world from many perspective, through different cultures, languages, and flavors,
-            it has become a valuable part of Rissa's outlook, in how she not only interacts with the world, but helps
+        <p class="caption">Through seeing the world from many perspectives: from the different cultures to the languages, and even to the flavors,
+            her wide and unique background has become a valuable part of Rissa's outlook, not only in how she interacts with the world, but in how she helps
             shape it.</p>
 
         <div class="timeline">
@@ -44,14 +44,14 @@
                             <p class="subtitle">Born in Manila, Philippines</p>
                             <p class="caption">It was a hot sunny Monday that marked her arrival into the
                                 world, in the vibrant city of Manila. This laid the foundation for a life of diverse
-                                experiences and global travels, although she would soon leave her birthplace.</p>
+                                experiences and global travels, although she would soon leave her birthplace for new destinations.</p>
                         </div>
                     </div>
                     <div class="event">
                         <span class="year">1989</span>
                         <div class="description">
                             <p class="subtitle">Moved to Singapore / Hong Kong</p>
-                            <p class="caption">Rissa's international journey started in Singapore, but after only a
+                            <p class="caption">Rissa's international journey began in Singapore, but after only a
                                 short time quickly relocated again, exposing her to the dynamic cultures of both
                                 Singapore and Hong Kong. This period instilled in her an appreciation for
                                 multiculturalism and adaptability.</p>
@@ -86,7 +86,7 @@
                         <div class="description">
                             <p class="subtitle">Moved to NYC</p>
                             <p class="caption">Post-graduation, the energy and excitement of New York City beckoned,
-                                leading Rissa to experience life in one of the world's most iconic cities. This
+                                leading Rissa to puruse her career in education there, and experience life in one of the world's most iconic cities. This
                                 period was               filled with personal and professional growth.</p>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                         <span class="year">2009</span>
                         <div class="description">
                             <p class="subtitle">Settled in Cincinnati</p>
-                            <p class="caption">Returning to Cincinnati, she married her now-husband, Ronnie, established
+                            <p class="caption">Returning to Cincinnati after her fiance had completed his Iraq deployment, she married her now-husband, Ronnie, established
                                 roots and
                                 built a home. This city became a place of stability and community.</p>
                         </div>
